--- a/config/vim/coc-settings.json
+++ b/config/vim/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "suggest.noselect": true,
+  "suggest.enablePreselect": false,
   "languageserver": {
     "golang": {
       "command": "gopls",
