--- a/config/starship.toml
+++ b/config/starship.toml
@@ -72,6 +72,10 @@ $status\
 $shell\
 [$character](bold green)"""
 
+[hostname]
+disabled = false
+ssh_only = false
+
 # Configure if and how the time is shown
 [time]
 disabled = false
@@ -79,7 +83,7 @@ disabled = false
 #format = "[$time ](bold blue)"
 
 [sudo]
-disabled = false
+disabled = true
 style = "bold green"
 symbol = "💪"
 format = "[<SUDO>$symbol]($style)"
